--- a/xgds_video/package.json
+++ b/xgds_video/package.json
@@ -10,7 +10,9 @@
   },
   "django": {
     "jwplayer": {
-      "include": [ "*" ]
+      "include": [
+        "*"
+      ]
     }
   },
   "devDependencies": {},
